--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,1 @@
-/.idea/.gitignore
-/.idea/deployment.xml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/PMFv2.iml
-/.idea/inspectionProfiles/profiles_settings.xml
-/.idea/inspectionProfiles/Project_Default.xml
-/.idea/vcs.xml
+.idea
